# whi-interviewer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  container_instances.yaml  dummy_users.csv  initialize.sql  main.py  pyproject.toml
.github/workflows/: push.yaml
example/deploy/: container_instances_dummy.yaml
interviewer/model/: environment.py  message.py  orm.py  user.py
interviewer/repository/: message.py  post.py  user.py
interviewer/service/: interviewer.py  migration.py
interviewer/util/: __init__.py  util.py
interviewer/view/: card.py
